# simplex-project

./: .gitignore  ARQUITECTURA.md  COMPARACION_SISTEMAS.md  ESTADO_SISTEMA_NLP.md  GUIA_DESARROLLADOR.md  GUIA_IA.md  GUIA_NLP.md  GUIA_REFORMULACION_PROBLEMAS.md  GUIA_USUARIO.md  GUIA_USUARIO_FINAL.md  HALLAZGOS_REFORMULACION.md  INSTALLER_CHANGELOG.md  INSTALLER_SUMMARY.md  LOGS_README.md  MEJORA_DETECCION_AUTOMATICA.md  README.md  RESUMEN_IMPLEMENTACION.md  build_exe.py  build_installer.py  debug_mistral.py  debug_nlp.py  debug_prompt.py  demo_problema_real.py  instalar_modelo_ollama.py  installer.manifest  installer.py  nlp_simplex.py  preguntas  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-full.txt  requirements.txt  simplex.py  test_different_models.py  test_installer.py  test_llama_directo.py  test_mistral_simple.py  test_modelos.py  test_modelos_avanzado.py  (+5 more)
.github/workflows/: ci.yml  codeql.yml
context_menu/: README.md  install.bat  reinstall.bat  run_solver.bat  run_solver_ai.bat  solve_from_context.py  solve_from_context_ai.py  uninstall.bat
docs/: BUILD_INSTALLER.md  BUILD_INSTRUCTIONS.md  CONTEXT_MENU_GUIDE.md  DEBUG_MODE.md  GUIA_IA.md  HISTORY_SYSTEM.md  INSTALLER_README.md  LOGGING_SYSTEM.md  guia_ejemplos.md  modelos_disponibles.md  nlp_system.md
docs/crc/: ARQUITECTURA.md  FileParser.md  INDICE.md  InputValidator.md  LogViewer.md  LoggingSystem.md  MockNLPProcessor.md  ModelValidator.md  NLPConnectorFactory.md  NLPOptimizationConnector.md  NLPResult.md  ORToolsModelGenerator.md  OllamaNLPProcessor.md  OptimizationProblem.md  PDFExporter.md  ProblemHistory.md  ProblemStructureDetector.md  PuLPModelGenerator.md  README.md  Tableau.md  (+7 more)
ejemplos/: README.md  ejemplo_carpinteria.txt  ejemplo_dos_fases.txt  ejemplo_ia_simple.txt  ejemplo_infactible.txt  ejemplo_maximizacion.txt  ejemplo_minimizacion.txt  ejemplo_minimizacion2.txt  ejemplo_multiples_soluciones.txt  ejemplo_no_acotado.txt  ejemplo_orfebre_LN.txt  ejemplo_produccion_simple.txt  ejemplo_soluciones_multiples.txt  max_4tablas.txt  minimizar_3variables.txt  minimizar_simple.txt  problema_pesado.txt  problema_produccion.txt  test.txt
logs/: simplex_logs.db
simplex_solver/: config.py  debug.py  export.py  file_parser.py  input_validator.py  log_viewer.py  logging_system.py  main.py  menu.py  problem_history.py  reporting_pdf.py  solver.py  user_interface.py
src/: export.py  export_py_backup.txt  file_parser.py  input_validator.py  log_viewer.py  logging_system.py  main.py  problem_history.py  reporting_pdf.py  solver.py  system_analyzer.py  tableau.py  test_all_systems.py  test_solver.py  test_systems_simple.py  user_interface.py
tests/: README.md  conftest.py  test_basic.py  test_context_menu.py  test_debug_mode.py  test_debug_mode_complex.py  test_e2e_dos_fases.py  test_e2e_nlp_pipeline.py  test_e2e_solver.py  test_export_pdf.py  test_logging_system.py  test_maximizacion.py  test_maximizacion_pytest.py  test_minimizacion.py  test_minimizacion_pytest.py  test_nlp_system.py  test_nlp_system_pytest.py  test_sensitivity_analysis.py  test_stress_solver.py  test_unit_nlp_processor.py  test_unit_parser_avanzado.py  test_unit_parser_ui.py  test_unit_solver_core.py  test_unit_utils.py  test_validation.py  test_validation_pytest.py  test_verbose_mode.py
tools/: README.md  build.py  build_exe.py  build_installer.py  history.py  logs.py  system_analyzer.py  test_history.py  view_history.py  view_logs.py
(+60 files in other folders)
