[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplex-solver"
version = "1.0.0"
description = "A professional Simplex Method solver with AI-powered problem interpretation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Francisco", email = ""}
]
keywords = ["simplex", "linear-programming", "optimization", "AI", "NLP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core runtime dependencies (minimal installation)
dependencies = [
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
# AI/NLP capabilities (full installation)
ai = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "sentencepiece>=0.1.99",
]

# Alternative optimization solvers
optimization = [
    "PuLP>=2.7.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

# Build tools
build = [
    "pyinstaller>=6.0.0",
]

# Complete installation (runtime + AI + optimization)
full = [
    "simplex-solver[ai,optimization]",
]

# All dependencies (runtime + AI + optimization + dev + build)
all = [
    "simplex-solver[full,dev,build]",
]

[project.scripts]
simplex-solver = "simplex_solver.main:main"

[project.urls]
Homepage = "https://github.com/frangcisneros/simplex-project"
Documentation = "https://github.com/frangcisneros/simplex-project/blob/main/GUIA_USUARIO.md"
Repository = "https://github.com/frangcisneros/simplex-project"
Issues = "https://github.com/frangcisneros/simplex-project/issues"

[tool.setuptools.packages.find]
include = ["simplex_solver*"]
exclude = ["tests*", "tools*", "build*", "dist*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["simplex_solver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=simplex_solver",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
]

[tool.coverage.run]
source = ["simplex_solver"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
